# dbfordevs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASES.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
crates/ai-assistant/: Cargo.toml  extension.json
crates/ai-assistant/src/: lib.rs  prompts.rs
crates/ai-assistant/src/providers/: anthropic.rs  mod.rs  traits.rs
crates/extension-core/: Cargo.toml
crates/extension-core/src/: lib.rs
crates/plugin-core/: Cargo.toml
crates/plugin-core/src/: lib.rs
crates/theme-nordic/: Cargo.toml  extension.json
crates/theme-nordic/src/: lib.rs
crates/theme-nordic/themes/: nordic-dark.css  nordic-light.css
crates/validator-core/: Cargo.toml
crates/validator-core/src/: lib.rs
crates/validator-csharp/: Cargo.toml
crates/validator-csharp/src/: lib.rs
crates/validator-nodejs/: Cargo.toml
crates/validator-nodejs/src/: lib.rs
crates/validator-python/: Cargo.toml
crates/validator-python/src/: lib.rs
docs/: ARCHITECTURE.md  EXTENSIONS.md  FEATURES.md  GETTING_STARTED.md  GRAPHITE.md  README.md  USER_GUIDE.md  dbfordevs_PRD.md  icon_generation.md
docs/releases/: RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.2.0.md
scripts/: bump-version.ts  tsconfig.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: all.json  app-commands.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: connections.rs  extensions.rs  mod.rs  queries.rs  tables.rs  utils.rs  validators.rs
src-tauri/src/db/: connection.rs  manager.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/extensions/: github.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src-tauri/src/models/: connection.rs  mod.rs  query.rs
src-tauri/src/storage/: mod.rs
src/components/ai/: AIInput.tsx  AIPanel.tsx  AISettingsDialog.tsx  ChatHistoryItem.tsx  ChatHistoryPanel.tsx  ChatMessage.tsx  ProviderModelSwitcher.tsx  QueryDiffView.tsx  QueryHistoryPanel.tsx  TableReferenceDropdown.tsx  index.ts
src/components/connections/: ConnectionModal.tsx  ConnectionPropertiesDialog.tsx  RenameConnectionDialog.tsx  index.ts
src/components/data-grid/: ColumnFilterPopover.tsx  DataGrid.tsx  DiffViewer.tsx  EditableCell.tsx  ExportMenu.tsx  index.ts
src/components/database/: CreateSchemaDialog.tsx  index.ts
src/components/editor/: SqlEditor.tsx  index.ts  monaco-themes.ts  sql-completion-provider.ts
src/components/layout/: MainContent.tsx  SidePanel.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/components/layout/tabs/: QueryEditorTab.tsx  TableViewerTab.tsx
src/components/marketplace/: Marketplace.tsx  index.ts
src/components/query-editor/: EmptyQueryState.tsx
src/components/query-history/: QueryHistoryDropdown.tsx  QueryHistoryDropdownItem.tsx  QueryHistoryItem.tsx  QueryHistoryPanel.tsx  query-history-utils.ts
src/components/settings/: PluginCard.tsx  SettingRow.tsx  SettingsDialog.tsx  ShortcutItem.tsx  index.ts
src/components/sidebar/: TableSearch.tsx
src/components/table/: RenameTableDialog.tsx  TableDiagramTab.tsx  TablePropertiesTab.tsx  index.ts
src/components/ui/: BrandIcon.tsx  alert-dialog.tsx  animated-button.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  execution-time-badge.tsx  form-field.tsx  index.ts  input.tsx  loading-spinner.tsx  row-count-badge.tsx  select.tsx  skeleton.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
src/data/: plugins.ts
src/extensions/: api.ts  hooks.ts  index.ts  store.ts  types.ts
src/extensions/ai/: api.ts  hooks.ts  prompts.ts  providers.ts  store.ts  tauri-fetch.ts  types.ts  utils.ts
src/extensions/core/: api.ts  catalog.ts  hooks.ts  store.ts  types.ts
src/extensions/themes/: hooks.ts  index.ts  official.ts  store.ts  types.ts
src/hooks/: index.ts  useAnime.ts  useAsyncOperation.ts  useCRUD.ts  useDatabase.ts  useKeyboardShortcuts.ts  useToast.ts  useValidator.ts
src/lib/: export-utils.ts  toast-helpers.ts  utils.ts
src/lib/ai/: api.ts  hooks.ts  index.ts  store.ts
src/lib/constants/: databases.ts
src/stores/: connections.ts  crud.ts  index.ts  query.ts  schema.ts  ui.ts
src/types/: index.ts
