[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/plugin-core",
    "crates/validator-core",
    "crates/validator-csharp",
    "crates/validator-nodejs",
    "crates/validator-python",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Daniels"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

