[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/extension-core",
    "crates/validator-core",
    "crates/validator-csharp",
    "crates/validator-nodejs",
    "crates/validator-python",
    "crates/theme-nordic",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Daniels"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

