[package]
name = "ai-assistant"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AI Query Assistant extension for dbfordevs - Powered by Claude"

[dependencies]
extension-core = { path = "../extension-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

