[package]
name = "theme-nordic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Nordic theme extension for dbfordevs - An arctic, north-bluish color palette"

[dependencies]
extension-core = { path = "../extension-core" }
serde = { workspace = true }
serde_json = { workspace = true }

