[package]
name = "validator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and types for dbfordevs connection string validators"

[dependencies]
extension-core = { path = "../extension-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

