[package]
name = "validator-csharp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "C# / .NET ADO.NET connection string validator for dbfordevs"

[dependencies]
extension-core = { path = "../extension-core" }
validator-core = { path = "../validator-core" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

