[package]
name = "validator-nodejs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Node.js connection string validator for dbfordevs (pg, mysql2, mssql packages)"

[dependencies]
extension-core = { path = "../extension-core" }
validator-core = { path = "../validator-core" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
url = "2"

